// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normal button renders 1`] = `
.c0 {
  display: inline-block;
  padding: 10px 20px;
  color: grey;
}

<button
  className="c0"
/>
`;

exports[`tomato button renders 1`] = `
.c0 {
  display: inline-block;
  padding: 10px 20px;
  color: grey;
  color: tomato;
}

<button
  className="c0"
/>
`;
